# hs-brainhack

./: .gitignore  README.md  brainhack.cabal  package.yaml  stack.yaml
src/Brainhack/: Evaluator.hs  Parser.hs
src/Brainhack/Parser/: Items.hs
