name:                brainhack
version:             0.1.0.0
synopsis:            The library for making brainf*ck dialect :+1:
description:         Please see README.md
homepage:            https://github.com/aiya000/brainhack
license:             MIT
license-file:        LICENSE
author:              aiya000
maintainer:          aiya000.develop@gmail.com
copyright:           aiya000
category:            Simple
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  build-depends:       base >= 4.7 && < 5
                     , attoparsec
                     , cmdargs
                     , containers
                     , mtl
                     , safe-exceptions
                     , text
                     , transformers
  default-language:    Haskell2010
  exposed-modules:     Brainhack.Evaluator
                     , Brainhack.Parser
                     , Brainhack.Parser.Items
